hphp/test/slow/eval_order/1500.php.expectf

Fatal error: Call to undefined method A::foo from anonymous context in %s/test/slow/eval_order/1500.php on line 7
string(7) "errored"
